--- a/src/main/resources/static/css/carritov2.css
+++ b/src/main/resources/static/css/carritov2.css
@@ -10,6 +10,12 @@
   --form-error-color: #ff1100c2;
 }
 
+.logo {
+    min-height: 8rem;
+    max-height: 8rem;
+    max-width: 10rem;
+  }
+  
 tbody{
     display: flex;
     padding: auto;
@@ -26,8 +32,7 @@ tfoot{
 }
 
 .Indice {
-    background-color: rgb(243, 243, 243);
-    border-left: 10px solid #fd611a;
+    background-color: rgb(243, 243, 243); 
     left: 1%;
     display: flex;
     flex-flow: wrap;
@@ -132,24 +137,21 @@ tfoot{
    
 }
 
-.button-finalizar:hover {
-    background: #fbc477;
+
+.imagen {
+    margin: 0; 
+    object-fit: cover;
+    min-width: 300px;
+    max-width: 300px;
+    min-height: 200px;
+    max-height: 200px;
 }
 
-.button-finalizar{
-    margin: auto;
-    margin-left: 10px;
-    padding: auto;
-    text-align: center;
-    width: 100px;
-    height: 50px;
-    background: var(--main-color);
-    border-radius: 20px;
-    box-shadow: 0px 0px 9px 7px rgba(122,122,122,0.2);
--webkit-box-shadow: 0px 0px 9px 7px rgba(122,122,122,0.2);
--moz-box-shadow: 0px 0px 9px 7px rgba(122,122,122,0.2);
-}
-
-.sub_indice{
-    top: 50%;
+.btnCarrito {
+    padding: 1rem 3rem;
+    background-color: #4d4d4d;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    color: #fff;
 }
