--- a/src/main/resources/static/css/catalogo.css
+++ b/src/main/resources/static/css/catalogo.css
@@ -101,6 +101,7 @@ p {
 .imgC {
     margin: 0;
     width: 100%;
-    max-height: 300px;
+    max-height: 180px;
+    min-height: 180px;
     object-fit: cover;
 }
